[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MathViber"
dynamic = ["version"]
description = "A modern Python web application for mathematical computations"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.dynamic]
version = {attr = "mathviber.__version__"}

[tool.setuptools.packages.find]
where = ["src"] 